project yaml files/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: vasist-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veg-deployment
  namespace: vasist-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: veg
  template:
    metadata:
      labels:
        app: veg
    spec:
      containers:
      - name: vasist-container
        image: muralisocial123/vegetable-app:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipl-deployment
  namespace: vasist-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ipl
  template:
    metadata:
      labels:
        app: ipl
    spec:
      containers:
      - name: ipl-container
        image: muralisocial123/ipl:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-deployment
  namespace: vasist-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
      - name: netflix-container
        image: muralisocial123/netflix-25.v1:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translate-deployment
  namespace: vasist-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: translate
  template:
    metadata:
      labels:
        app: translate
    spec:
      containers:
      - name: translate-container
        image: muralisocial123/translator-app:latest
        ports:
        - containerPort: 80
