project yaml files/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: vasist-ns
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: veg-service
  namespace: vasist-ns
spec:
  selector:
    app: veg
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ipl-service
  namespace: vasist-ns
spec:
  selector:
    app: ipl
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
  namespace: vasist-ns
spec:
  selector:
    app: netflix
  ports:
  - port: 81
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: translate-service
  namespace: vasist-ns
spec:
  selector:
    app: translate
  ports:
  - port: 82
    targetPort: 80
